infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: www.traveloutline.com
      http:
        paths:
          - path: /laravel
            pathType: ImplementationSpecific
            backend:
              service:
                name: laravel-srv
                port:
                  number: 9000
          - path: /client
            pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-client-srv
                port:
                  number: 3000
          - path: /nodejs-chat
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-chat-service
                port:
                  number: 2345
          - path: /pma
            pathType: ImplementationSpecific
            backend:
              service:
                name: pma-service
                port:
                  number: 80
